Dark Mode - Added styles for dark mode to avoid strong lights on the eye when working at night.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,9 +15,14 @@
 
 body {
   background-color: var(--bg-color);
+  color: var(--fg-color);
   font-family: 'Helvetica Neue', 'Roboto', 'Arial',  sans-serif;
   font-size: 16px;
   letter-spacing: -1px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+button {
+  color: inherit;
 }
